--- a/package.json
+++ b/package.json
@@ -35,7 +35,17 @@
   "devDependencies": {
     "@babel/core": "^7.8.6",
     "babel-preset-expo": "~8.1.0",
-    "jest-expo": "~37.0.0"
+    "eslint": "^7.0.0",
+    "eslint-plugin-react": "^7.20.0",
+    "husky": "^4.2.5",
+    "jest-expo": "~37.0.0",
+    "prettier": "2.0.5",
+    "pretty-quick": "^2.0.1"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "pretty-quick --staged"
+    }
   },
   "private": true
 }
