--- a/package.json
+++ b/package.json
@@ -1,51 +1,61 @@
 {
-  "main": "node_modules/expo/AppEntry.js",
-  "scripts": {
-    "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
-    "web": "expo start --web",
-    "eject": "expo eject",
-    "test": "jest --watchAll"
-  },
-  "jest": {
-    "preset": "jest-expo"
-  },
-  "dependencies": {
-    "@expo/vector-icons": "~10.0.6",
-    "@react-native-community/masked-view": "0.1.6",
-    "@react-navigation/bottom-tabs": "^5.3.1",
-    "@react-navigation/native": "^5.2.1",
-    "@react-navigation/stack": "^5.2.16",
-    "expo": "~37.0.9",
-    "expo-asset": "~8.1.0",
-    "expo-constants": "~9.0.0",
-    "expo-font": "~8.1.0",
-    "expo-linking": "^1.0.1",
-    "expo-splash-screen": "^0.2.3",
-    "expo-web-browser": "~8.2.0",
-    "react": "~16.9.0",
-    "react-dom": "~16.9.0",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-37.0.1.tar.gz",
-    "react-native-gesture-handler": "~1.6.0",
-    "react-native-safe-area-context": "0.7.3",
-    "react-native-screens": "~2.2.0",
-    "react-native-web": "~0.11.7"
-  },
-  "devDependencies": {
-    "@babel/core": "^7.8.6",
-    "babel-preset-expo": "~8.1.0",
-    "eslint": "^7.0.0",
-    "eslint-plugin-react": "^7.20.0",
-    "husky": "^4.2.5",
-    "jest-expo": "~37.0.0",
-    "prettier": "2.0.5",
-    "pretty-quick": "^2.0.1"
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "pretty-quick --staged"
-    }
-  },
-  "private": true
+    "main": "node_modules/expo/AppEntry.js",
+    "scripts": {
+        "start": "expo start",
+        "android": "expo start --android",
+        "ios": "expo start --ios",
+        "web": "expo start --web",
+        "eject": "expo eject",
+        "test": "jest --watchAll"
+    },
+    "jest": {
+        "preset": "jest-expo"
+    },
+    "dependencies": {
+        "@expo/vector-icons": "~10.0.6",
+        "@react-native-community/masked-view": "0.1.6",
+        "@react-navigation/bottom-tabs": "^5.4.7",
+        "@react-navigation/native": "^5.2.1",
+        "@react-navigation/stack": "^5.2.16",
+        "expo": "~37.0.9",
+        "expo-asset": "~8.1.0",
+        "expo-constants": "~9.0.0",
+        "expo-font": "~8.1.0",
+        "expo-linking": "^1.0.1",
+        "expo-splash-screen": "^0.2.3",
+        "expo-web-browser": "~8.2.0",
+        "firebase": "7.9.0",
+        "react": "~16.9.0",
+        "react-dom": "~16.9.0",
+        "react-native": "https://github.com/expo/react-native/archive/sdk-37.0.1.tar.gz",
+        "react-native-bcrypt": "^2.4.0",
+        "react-native-firebase": "^5.6.0",
+        "react-native-gesture-handler": "~1.6.0",
+        "react-native-safe-area-context": "0.7.3",
+        "react-native-screens": "~2.2.0",
+        "react-native-web": "~0.11.7",
+        "react-navigation": "^4.3.9"
+    },
+    "devDependencies": {
+        "@babel/core": "^7.8.6",
+        "babel-preset-expo": "~8.1.0",
+        "eslint": "^7.0.0",
+        "eslint-plugin-react": "^7.20.0",
+        "husky": "^4.2.5",
+        "jest-expo": "~37.0.0",
+        "prettier": "2.0.5",
+        "pretty-quick": "^2.0.1"
+    },
+    "husky": {
+        "hooks": {
+            "pre-commit": "pretty-quick --staged"
+        }
+    },
+    "prettier": {
+        "trailingComma": "es5",
+        "singleQuote": true,
+        "printWidth": 100,
+        "tabWidth": 4
+    },
+    "private": true
 }
