--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
         "expo-asset": "~8.1.0",
         "expo-constants": "~9.0.0",
         "expo-font": "~8.1.0",
+        "expo-image-picker": "~8.1.0",
         "expo-linking": "^1.0.1",
         "expo-splash-screen": "^0.2.3",
         "expo-web-browser": "~8.2.0",
@@ -28,17 +29,19 @@
         "react": "~16.9.0",
         "react-dom": "~16.9.0",
         "react-native": "https://github.com/expo/react-native/archive/sdk-37.0.1.tar.gz",
+        "react-native-elements": "^2.0.1",
         "react-native-gesture-handler": "~1.6.0",
         "react-native-safe-area-context": "0.7.3",
         "react-native-screens": "~2.2.0",
         "react-native-web": "~0.11.7",
-        "react-native-webview": "8.1.1"
+        "react-native-webview": "8.1.1",
+        "react-redux": "^7.2.0",
+        "redux": "^4.0.5",
+        "redux-thunk": "^2.3.0"
     },
     "devDependencies": {
         "@babel/core": "^7.8.6",
         "babel-preset-expo": "~8.1.0",
-        "eslint": "^7.0.0",
-        "eslint-plugin-react": "^7.20.0",
         "husky": "^4.2.5",
         "jest-expo": "~37.0.0",
         "prettier": "2.0.5",
