--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
         "preset": "jest-expo"
     },
     "dependencies": {
-        "@expo/vector-icons": "~10.0.6",
         "@react-native-community/masked-view": "0.1.6",
         "@react-navigation/bottom-tabs": "^5.4.7",
         "@react-navigation/native": "^5.2.1",
@@ -22,7 +21,7 @@
         "expo-constants": "~9.0.0",
         "expo-font": "~8.1.0",
         "expo-image-picker": "~8.1.0",
-        "expo-linking": "^1.0.1",
+        "expo-linear-gradient": "~8.1.0",
         "expo-splash-screen": "^0.2.3",
         "expo-web-browser": "~8.2.0",
         "firebase": "7.9.0",
@@ -33,6 +32,7 @@
         "react-native-gesture-handler": "~1.6.0",
         "react-native-safe-area-context": "0.7.3",
         "react-native-screens": "~2.2.0",
+        "react-native-vector-icons": "^6.6.0",
         "react-native-web": "~0.11.7",
         "react-native-webview": "8.1.1",
         "react-redux": "^7.2.0",
@@ -40,8 +40,8 @@
         "redux-thunk": "^2.3.0"
     },
     "devDependencies": {
-        "@babel/core": "^7.8.6",
-        "babel-preset-expo": "~8.1.0",
+        "@babel/core": "^7.10.2",
+        "babel-preset-expo": "^8.2.1",
         "husky": "^4.2.5",
         "jest-expo": "~37.0.0",
         "prettier": "2.0.5",
