--- a/package.json
+++ b/package.json
@@ -16,17 +16,17 @@
         "@react-navigation/bottom-tabs": "^5.4.7",
         "@react-navigation/native": "^5.2.1",
         "@react-navigation/stack": "^5.2.16",
-        "expo": "~37.0.9",
-        "expo-asset": "~8.1.0",
+        "expo": "^37.0.0",
+        "expo-asset": "~8.1.5",
         "expo-constants": "~9.0.0",
         "expo-font": "~8.1.0",
         "expo-image-picker": "~8.1.0",
         "expo-linear-gradient": "~8.1.0",
         "expo-splash-screen": "^0.2.3",
-        "expo-web-browser": "~8.2.0",
+        "expo-web-browser": "~8.2.1",
         "firebase": "7.9.0",
-        "react": "~16.9.0",
-        "react-dom": "~16.9.0",
+        "react": "16.9.0",
+        "react-dom": "16.9.0",
         "react-native": "https://github.com/expo/react-native/archive/sdk-37.0.1.tar.gz",
         "react-native-dotenv": "^0.2.0",
         "react-native-elements": "^2.0.1",
@@ -34,7 +34,7 @@
         "react-native-safe-area-context": "0.7.3",
         "react-native-screens": "~2.2.0",
         "react-native-vector-icons": "^6.6.0",
-        "react-native-web": "~0.11.7",
+        "react-native-web": "^0.11.7",
         "react-native-webview": "8.1.1",
         "react-redux": "^7.2.0",
         "redux": "^4.0.5",
@@ -42,9 +42,9 @@
     },
     "devDependencies": {
         "@babel/core": "^7.10.2",
-        "babel-preset-expo": "^8.2.1",
+        "babel-preset-expo": "^8.1.0",
         "husky": "^4.2.5",
-        "jest-expo": "~37.0.0",
+        "jest-expo": "^37.0.0",
         "prettier": "2.0.5",
         "pretty-quick": "^2.0.1"
     },
