--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
         "preset": "jest-expo"
     },
     "dependencies": {
+        "@react-native-community/masked-view": "0.1.6",
         "@react-navigation/bottom-tabs": "^5.4.7",
         "@react-navigation/native": "^5.2.1",
         "@react-navigation/stack": "^5.2.16",
