--- a/app.json
+++ b/app.json
@@ -8,14 +8,14 @@
             "androidMode": "default",
             "iosDisplayInForeground": true
         },
-        "platforms": ["ios", "android", "web"],
+        "platforms": ["ios", "android"],
         "version": "1.0.0",
         "orientation": "portrait",
         "icon": "./App/assets/images/icon.png",
         "splash": {
             "image": "./App/assets/images/splash.png",
             "resizeMode": "contain",
-            "backgroundColor": "#ffff"
+            "backgroundColor": "#ffffff"
         },
         "updates": {
             "fallbackToCacheTimeout": 0
@@ -39,11 +39,13 @@
                 "WRITE_EXTERNAL_STORAGE",
                 "READ_INTERNAL_STORAGE",
                 "NOTIFICATIONS"
-            ]
+            ],
+            "useNextNotificationsApi": true
         },
         "web": {
             "favicon": "./assets/images/favicon.png"
         },
-        "description": "A social app for Tembusians (An Apollo-11 Project)"
+        "description": "A social app for Tembusians (An Apollo-11 Project)",
+        "privacy": "public"
     }
 }
