--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "@react-navigation/stack": "^5.6.2",
         "expo": "^38.0.0",
         "expo-asset": "~8.1.7",
+        "expo-barcode-scanner": "~8.2.1",
         "expo-font": "~8.2.1",
         "expo-image-picker": "~8.3.0",
         "expo-linear-gradient": "~8.2.1",
@@ -32,6 +33,7 @@
         "react": "16.11.0",
         "react-dom": "16.11.0",
         "react-native": "https://github.com/expo/react-native/archive/sdk-38.0.0.tar.gz",
+        "react-native-custom-qr-codes-expo": "^2.2.0",
         "react-native-dotenv": "^0.2.0",
         "react-native-elements": "^2.0.4",
         "react-native-gesture-handler": "~1.6.0",
@@ -41,6 +43,7 @@
         "react-native-safe-area-context": "~3.0.7",
         "react-native-screens": "~2.9.0",
         "react-native-share": "^3.7.0",
+        "react-native-svg": "12.1.0",
         "react-native-vector-icons": "^7.0.0",
         "react-native-web": "~0.11.7",
         "react-native-webview": "9.4.0",
