--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
         "expo-image-picker": "~8.3.0",
         "expo-linear-gradient": "~8.2.1",
         "expo-notifications": "~0.3.3",
+        "expo-sharing": "~8.2.1",
         "firebase": "7.9.0",
         "react": "16.11.0",
         "react-dom": "16.11.0",
@@ -42,9 +43,9 @@
         "react-native-reanimated": "~1.9.0",
         "react-native-safe-area-context": "~3.0.7",
         "react-native-screens": "~2.9.0",
-        "react-native-share": "^3.7.0",
         "react-native-svg": "12.1.0",
         "react-native-vector-icons": "^7.0.0",
+        "react-native-view-shot": "3.1.2",
         "react-native-web": "~0.11.7",
         "react-native-webview": "9.4.0",
         "react-redux": "^7.2.0",
