--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "dependencies": {
         "@react-native-community/masked-view": "0.1.10",
         "@react-navigation/bottom-tabs": "^5.6.1",
+        "@react-navigation/material-top-tabs": "^5.2.13",
         "@react-navigation/native": "^5.6.1",
         "@react-navigation/stack": "^5.6.2",
         "expo": "^38.0.0",
@@ -45,6 +46,7 @@
         "react-native-safe-area-context": "~3.0.7",
         "react-native-screens": "~2.9.0",
         "react-native-svg": "12.1.0",
+        "react-native-tab-view": "^2.15.0",
         "react-native-vector-icons": "^7.0.0",
         "react-native-view-shot": "3.1.2",
         "react-native-web": "~0.11.7",
