--- a/package.json
+++ b/package.json
@@ -6,13 +6,10 @@
         "ios": "expo start --ios",
         "web": "expo start --web",
         "eject": "expo eject",
-        "test": "jest --watchAll"
+        "test": "jest"
     },
     "jest": {
         "preset": "jest-expo",
-        "setupFiles": [
-            "./App/jest/setup.js"
-        ],
         "transformIgnorePatterns": [
             "node_modules/(?!(jest-)?react-native|react-clone-referenced-element|@react-native-community|expo(nent)?|@expo(nent)?/.*|react-navigation|@react-navigation/.*|@unimodules/.*|unimodules|sentry-expo|native-base|@sentry/.*)"
         ]
