--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
         "ios": "expo start --ios",
         "web": "expo start --web",
         "eject": "expo eject",
-        "test": "jest"
+        "test": "jest --watch --coverage=false --changedSince=origin/master",
+        "testDebug": "jest -o --watch --coverage=false",
+        "testFinal": "jest",
+        "updateSnapshots": "jest -u --coverage=false"
     },
     "jest": {
         "preset": "jest-expo",
