--- a/package.json
+++ b/package.json
@@ -12,7 +12,14 @@
         "updateSnapshots": "jest -u --coverage=false"
     },
     "jest": {
-        "preset": "jest-expo/universal",
+        "projects": [
+            {
+                "preset": "jest-expo/ios"
+            },
+            {
+                "preset": "jest-expo/android"
+            }
+        ],
         "transformIgnorePatterns": [
             "node_modules/(?!(jest-)?react-native|react-clone-referenced-element|@react-native-community|expo(nent)?|@expo(nent)?/.*|react-navigation|@react-navigation/.*|@unimodules/.*|unimodules|sentry-expo|native-base|@sentry/.*)"
         ]
