--- a/package.json
+++ b/package.json
@@ -32,48 +32,48 @@
         "@react-navigation/bottom-tabs": "^5.6.1",
         "@react-navigation/native": "^5.6.1",
         "@react-navigation/stack": "^5.6.2",
-        "expo": "^38.0.0",
-        "expo-asset": "~8.1.7",
-        "expo-barcode-scanner": "~8.2.1",
-        "expo-font": "~8.2.1",
-        "expo-image-picker": "~8.3.0",
-        "expo-linear-gradient": "~8.2.1",
-        "expo-notifications": "~0.3.3",
-        "expo-sharing": "~8.2.1",
-        "firebase": "7.9.0",
-        "react": "16.11.0",
-        "react-dom": "16.11.0",
-        "react-native": "https://github.com/expo/react-native/archive/sdk-38.0.0.tar.gz",
+        "@testing-library/react-native": "^7.1.0",
+        "expo": "^40.0.0",
+        "expo-asset": "~8.2.1",
+        "expo-barcode-scanner": "~9.1.0",
+        "expo-font": "~8.4.0",
+        "expo-image-picker": "~9.2.0",
+        "expo-linear-gradient": "~8.4.0",
+        "expo-notifications": "~0.8.2",
+        "expo-sharing": "~8.5.0",
+        "firebase": "8.2.0",
+        "react": "17.0.1",
+        "react-dom": "17.0.1",
+        "react-native": "https://github.com/expo/react-native/archive/sdk-40.0.0.tar.gz",
         "react-native-custom-qr-codes-expo": "^2.2.0",
-        "react-native-dotenv": "^0.2.0",
-        "react-native-elements": "^2.0.4",
-        "react-native-gesture-handler": "~1.6.0",
+        "react-native-dotenv": "^2.4.3",
+        "react-native-elements": "^3.0.0",
+        "react-native-gesture-handler": "~1.9.0",
         "react-native-image-zoom-viewer": "^3.0.1",
-        "react-native-picker-select": "^7.0.0",
+        "react-native-picker-select": "^8.0.4",
         "react-native-progress": "^4.1.2",
-        "react-native-reanimated": "~1.9.0",
-        "react-native-safe-area-context": "~3.0.7",
-        "react-native-screens": "~2.9.0",
+        "react-native-reanimated": "~1.13.0",
+        "react-native-safe-area-context": "3.1.9",
+        "react-native-screens": "~2.16.1",
         "react-native-svg": "12.1.0",
         "react-native-tab-view": "^2.15.0",
         "react-native-vector-icons": "^7.0.0",
         "react-native-view-more-text": "^2.1.0",
         "react-native-view-shot": "3.1.2",
-        "react-native-web": "~0.11.7",
-        "react-native-webview": "9.4.0",
+        "react-native-web": "~0.14.9",
+        "react-native-webview": "11.0.2",
         "react-redux": "^7.2.0",
         "redux": "^4.0.5",
         "redux-thunk": "^2.3.0"
     },
     "devDependencies": {
-        "@babel/core": "^7.10.4",
-        "babel-preset-expo": "^8.2.3",
+        "@babel/core": "~7.12.10",
+        "babel-preset-expo": "8.3.0",
         "husky": "^4.2.5",
-        "jest-expo": "^38.0.0",
+        "jest-expo": "^40.0.0",
         "prettier": "^2.0.5",
-        "pretty-quick": "^2.0.1",
-        "react-native-testing-library": "^2.1.0",
-        "react-test-renderer": "^16.13.1"
+        "pretty-quick": "^3.1.0",
+        "react-test-renderer": "^17.0.1"
     },
     "resolutions": {
         "logkitty": "^0.7.1"
